feat: add feature of getting tasks & getting statuses
